# Faith-Connect-Hub-v2

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: attendance.py  auth.py  groups.py  meetings.py  members.py  users.py  visitors.py
app/core/: exceptions.py  permissions.py  security.py
app/db/: base.py  session.py
app/models/: attendance.py  group.py  meeting.py  member.py  user.py  visitor.py
app/schemas/: attendance.py  common.py  group.py  meeting.py  member.py  token.py  user.py  visitor.py
app/services/: attendance_service.py  group_service.py  meeting_service.py  member_service.py  user_service.py  visitor_service.py
app/utils/: pagination.py  validators.py
