[project]
name = "palace-cell-fellowship-data-collection-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
